# ouroboros

./: .appveyor.yml  .gitignore  .gitmodules  README.md  clean.sh  requirements.txt  setup.cfg  setup.py  sitecustomize.py  test.sh
ouroboros/: __init__.py  __main__.py
ouroboros/auxiliary/: Timestamp.0.1.uavcan  filesystem.py
ouroboros/io/: Configuration.0.1.uavcan  Status.0.1.uavcan  __init__.py  __main__.py  _transport.py  _worker.py
ouroboros/io/frame/: Frame.0.1.uavcan  Manifestation.0.1.uavcan
ouroboros/io/iface/: OperationalInfo.0.1.uavcan  State.0.1.uavcan  Status.0.1.uavcan
ouroboros_ipc/io/: Status.0.1.uavcan  Transfer.0.1.uavcan
ouroboros_ipc/io/frame/: Frame.0.1.uavcan
ouroboros_ipc/io/iface/: Error.0.1.uavcan  OperationalInfo.0.1.uavcan  State.0.1.uavcan  Status.0.1.uavcan
ouroboros_ipc/util/: Timestamp.0.1.uavcan
tests/: __init__.py
