[metadata]
name            = ouroboros
version         = file: ouroboros/VERSION
author          = UAVCAN Development Team
author_email    = maintainers@uavcan.org
url             = https://uavcan.org
description     = A PoC-level proposed experimental implementation of the Yukon backend.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    gui
    uavcan
    data-bus
    can-bus
    ethernet
    vehicular
    onboard-networking
    avionics
    communication-protocol
classifiers =
    Intended Audience :: Customer Service
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Human Machine Interfaces
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development :: Embedded Systems
    Topic :: Software Development :: Debuggers
    Topic :: Software Development :: User Interfaces
    Topic :: System :: Distributed Computing
    Topic :: System :: Networking
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

# ========================================  PACKAGE CONFIGURATION  ========================================

[options]
zip_safe             = False
include_package_data = True
packages             = find:
install_requires =
    pyuavcan @ git+https://github.com/UAVCAN/pyuavcan@monitoring#egg=pyuavcan
    click ~= 7.1


[options.packages.find]
# https://setuptools.readthedocs.io/en/latest/setuptools.html#find-namespace-packages
include =
    ouroboros
    ouroboros.*

[options.entry_points]
# Scripts and their abridged aliases.
console_scripts =
    ouroboros_io = ouroboros.io:main

[options.package_data]
# jingle bells jingle bells
# jingle all the way
* =
        *
       */*
      */*/*
     */*/*/*
    */*/*/*/*
# oh what fun it is to ride
# in a one-horse open sleigh

# ========================================  DEVELOPMENT AND MAINTENANCE  ========================================

[tool:pytest]
testpaths        = ouroboros tests
python_files     = *.py
python_classes   = _UnitTest
python_functions = _unittest_
log_level        = DEBUG
log_cli_level    = WARNING
log_cli          = true
log_file         = pytest.log
addopts          = --doctest-modules -v
# NumPy sometimes emits "invalid value encountered in multiply" which we don't care about.
filterwarnings =
    error
    ignore:invalid value encountered in multiply:RuntimeWarning

[mypy]
# Python version is not specified to allow checking against different versions.
warn_return_any        = True
warn_unused_configs    = True
disallow_untyped_defs  = True
check_untyped_defs     = True
no_implicit_optional   = True
warn_redundant_casts   = True
warn_unused_ignores    = True
show_error_context     = True
mypy_path =
    .test_dsdl_generated

[mypy-pytest]
ignore_missing_imports = True

[mypy-pydsdl]
ignore_missing_imports = True

[mypy-pyuavcan]
ignore_missing_imports = True

[mypy-pyuavcan.*]
ignore_missing_imports = True

[mypy-nunavut]
ignore_missing_imports = True

[mypy-nunavut.*]
ignore_missing_imports = True

[mypy-numpy]
ignore_missing_imports = True

[mypy-coloredlogs]
ignore_missing_imports = True

[coverage:run]
data_file = .coverage
branch    = True
parallel  = True
source =
    ouroboros
    tests
    .test_dsdl_generated

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    assert False
    if False:
    if __name__ == .__main__.:

[pycodestyle]
# E221 multiple spaces before operator
# E241 multiple spaces after ':'
# W503 line break before binary operator (this is actually the recommended style, the linter is wrong here)
ignore          = E221, E241, W503
max-line-length = 120
show-source     = True
